# dt_uwds3_scripts

./: CMakeLists.txt  README.md  package.xml
launch/: facts_computation.launch  internal_simulator.launch  perception_tags.launch  pr2.launch  sa.launch  tag_service.launch
scripts/: ar_perception_node.py  dt_internal_simulator_node.py  facts_computation_node.py  tag_service_node.py
